# sqlalchemy-schema

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  pre-commit-autoupdate.yml  publish.yml
examples/00simple/: Makefile  models.py
examples/00simple/dst/: default.json  jsonschema.json  openapi3.json
sqlalchemy_schema/: exceptions.py  schema_factory.py
sqlalchemy_to_json_schema/: __init__.py  debug.py  decisions.py  dictify.py  exceptions.py  mapping.py  parser.py  schema_factory.py  types.py  walkers.py
sqlalchemy_to_json_schema/command/: _transformer.py  driver.py  main.py  transformer.py
sqlalchemy_to_json_schema/custom/: format.py
sqlalchemy_to_json_schema/tests/: test_apply_changes.py  test_dictify.py  test_it_mapping.py  test_modellookup.py  test_objectify.py  test_parser.py  test_schema_walk.py  test_sqla_custom_type.py  test_sqla_postgres_uuid.py
sqlalchemy_to_json_schema/tests/custom/: test_date.py  test_time.py
sqlalchemy_to_json_schema/tests/regression/: test_generate_schema_with_type_decorator.py  test_jsonify_with_None_value_attribute.py  test_no_required_models.py
sqlalchemy_to_json_schema/utils/: imports.py
tests/: test_apply_changes.py  test_detect.py  test_dictify.py  test_it.py  test_it_mapping.py  test_it_reflection.py  test_modellookup.py  test_objectify.py  test_parser.py  test_relation.py  test_schema_factory.py  test_schema_walk.py  test_sqla_custom_type.py  test_sqla_hybrid_property.py  test_sqla_json.py  test_sqla_postgres_uuid.py  test_walker.py
tests/command/: test_driver.py  test_main.py  test_transformer.py
tests/custom/: test_date.py  test_format.py  test_time.py
tests/fixtures/: models.py
tests/fixtures/models/: __init__.py  address.py  not_a_sa_model.py  user.py
tests/regression/: test_generate_schema_with_type_decorator.py  test_jsonify_with_None_value_attribute.py  test_no_required_models.py
tests/utils/: test_format.py  test_imports.py
