[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "sqlalchemy-to-json-schema"
version = "0.2.0"
description = "Convert SQLAlchemy models to JSON Schema definitions"
repository = "https://github.com/expobrain/sqlalchemy-to-json-schema"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sqlalchemy_to_json_schema" }]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = {version = ">=2", extras = ["mypy"]}
jsonschema = ">=4.17.3"
python-dateutil = ">=2.8"
click = ">=8.1"
pyyaml = ">=5.4"
loguru = ">=0.7"
typing-extensions = ">=4.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"
pytest = "^8.1.0"
pytest-cov = "^4.0.0"
pytest-clarity = "^1.0.1"
pytest-testmon = "^2.1.0"
pytest-timeout = "^2.2.0"
pytest-mock = "^3.12.0"
types-pygments = "^2.17.0.20240106"
types-colorama = "^0.4.15.20240205"
types-jsonschema = "^4.21.0.20240118"
types-pytz = "^2024.1.0.20240203"
types-setuptools = "^69.1.0.20240223"
types-python-dateutil = "^2.8.19.20240106"
types-pyyaml = "^6.0.12.12"
types-mock = "^5.1.0.20240106"
pytest-unordered = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
plugins = ["sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
timeout = 10

[tool.poetry.scripts]
sqlalchemy_to_json_schema = "sqlalchemy_to_json_schema.command.main:main"
